--- a/app/views/search/index.erb
+++ b/app/views/search/index.erb
@@ -1,6 +1,6 @@
 <% if @books.empty? %>
     <div class='alert alert-info'>
-      Sorry, No Books Found.
+      Sorry, No Book Found.
     </div>
 <% end %>
 
