--- a/app/views/books/shared_books.erb
+++ b/app/views/books/shared_books.erb
@@ -1,6 +1,6 @@
 <% if @books.empty? %>
     <div class='alert alert-info'>
-      Sorry, You have not shared any book.
+      Sorry, You haven't shared any book.
     </div>
 <% else %>
     <%= render partial: 'books' %>
