--- a/app/views/books/_books.erb
+++ b/app/views/books/_books.erb
@@ -18,17 +18,16 @@
             </li>
           </div>
 
-          <input type="hidden" name="hidden_text"/>
-
-          <div class='row'>
-            <label class='col-lg-3 col-md-3 col-sm-3 col-xs-3 control-label'>Title:</label>
-            <span class='col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1 col-lg-8 col-md-8 col-sm-8 col-xs-8'><%= book.title %></span>
+          <div class="book-data">
+            <div class='row'>
+              <label class='col-lg-3 col-md-3 col-sm-3 col-xs-3 control-label'>Title:</label>
+              <span class='col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1 col-lg-8 col-md-8 col-sm-8 col-xs-8'><%= book.title %></span>
+            </div>
+            <div class='row'>
+              <label class='col-lg-3 col-md-3 col-sm-3 col-xs-3 control-label'>Author:</label>
+              <span class='col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1 col-lg-8 col-md-8 col-sm-8 col-xs-8'><%= book.author %></span>
+            </div>
           </div>
-          <div class='row'>
-            <label class='col-lg-3 col-md-3 col-sm-3 col-xs-3 control-label'>Author:</label>
-            <span class='col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1 col-lg-8 col-md-8 col-sm-8 col-xs-8'><%= book.author %></span>
-          </div>
-
         </div>
       </div>
   <% end %>
