--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -1,7 +1,3 @@
-body {
-  background: #ffffff;
-}
-
 .content {
   margin: 0 10px;
 }
@@ -11,32 +7,42 @@ body {
 }
 
 .header {
-  padding: 10px;
+  background: url("background.png") repeat-y;
+  background-size: contain;
+  padding: 10px 0 10px;
   .logo {
-    background: url("booksharelogo.png") no-repeat;
-    height: 55px;
+    background: url("logo_image.png") no-repeat;
+    height: 65px;
     background-size: contain;
+    padding-left: 134px;
+    color: whitesmoke;
+    padding-top: 27px;
+    font-weight: bold;
+    font-size: 36px;
   }
 }
 
 .search-form {
-  padding-top: 10px;
-  padding-left: 10px;
+  padding-top: 30px;
+}
+
+.navbar {
+  min-height: 0;
 }
 
 .navbar-default {
-  background: -webkit-linear-gradient(top, lightgray, darkgray);
-  background: -moz-linear-gradient(top, darkgray, gray);
-  border: 2px solid gray;
-  margin: 0 10px 10px;
+  background: url("background.png") repeat-y;
+  background-size: contain;
+  border: none;
+  border-top: 1px solid white;
+  border-radius: 0;
 
   .navbar-nav > li > a {
     color: white;
-    display: inline-block;
   }
   .count {
-    border: 1px solid gray;
-    padding: 4px;
+    border: 1px solid white;
+    padding: 3px;
     color: white;
     border-radius: 4px;
   }
@@ -47,42 +53,90 @@ body {
 }
 
 .count-shared-books {
-  background: forestgreen;
+  background: rgb(103, 150, 102);
 }
 
 .count-borrowed-books {
-  background: #c8232e;
+  background: rgb(185, 101, 100);
 }
 
 .navbar-default .navbar-nav > li > a:hover {
-  color: rgb(96, 96, 96);
+  color: rgb(27, 73, 156);
   sup {
-    color: rgb(96, 96, 96);
+    color: rgb(27, 73, 156);
   }
 }
 
-.navbar-nav > li {
-  font-size: 16px;
-  font-weight: bold;
+.navbar-default .navbar-nav > .open {
+  a, &> a:hover, &> a:focus {
+    color: #2C67A1;
+    background-color: transparent;
+  }
+}
+
+.navbar-nav {
+
+  & > li {
+    font-size: 16px;
+    font-weight: bold;
+    padding: 15px 0 12px;
+
+    & > a {
+      color: white;
+      padding: 0 30px;
+      border-right: 1px solid whitesmoke;
+    }
+  }
+  & > li:last-child {
+    a {
+      border: none;
+    }
+  }
+
+  & > li:first-child {
+    a {
+      padding-left: 0;
+    }
+  }
+
+  .dropdown-toggle {
+
+  }
+
 }
 
 .input-group {
-  .input-group-addon {
-    padding: 0;
-    vertical-align: 0;
-  }
-  .input-group-btn:first-child > .btn {
-    padding: 6px 20px;
+  .input-group-btn {
+    background: white;
+    padding: 7px 0;
+    border: 0;
     border-top-left-radius: 3px;
     border-bottom-left-radius: 3px;
-    outline: none;
   }
-  .btn {
-    background: darkgray;
-    border-radius: 0;
-    color: #ffffff;
-    border: 1px solid transparent;
+
+  .form-control {
+    border: 0;
+    padding: 6px 23px;
+  }
+
+  .input-group-addon {
+    padding: 0;
+    border: none;
+  }
+  .input-group-btn:first-child > .btn {
+    padding: 0 20px;
+    border: 0;
+    border-right: 1px solid darkgray;
     outline: none;
+    margin-right: -2px;
+    color: darkgray;
+  }
+
+  .btn {
+    border-radius: 0;
+    outline: none;
+    background: white;
+    color: darkgray
   }
   #filter > li {
     cursor: pointer;
@@ -91,7 +145,6 @@ body {
     padding-right: 5px;
   }
 }
-
 
 .icon {
   padding-right: 20px;
