--- a/app/views/books/show.erb
+++ b/app/views/books/show.erb
@@ -1,8 +1,7 @@
 <div class="row">
-  <button class="btn btn-primary pull-right">
-    <a href="#" data-toggle='modal' id="add_new_borrower" class="">+ Add New Borrower</a>
-  </button>
-
+    <a href="#" data-toggle='modal' id="add_new_borrower" class="">
+      <button class="btn btn-primary pull-right">+ Add New Borrower</button>
+    </a>
 </div>
 
 <div class="row">
