--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
              <li><a>isbn</a></li>
            </ul>
         </span>
-          <input type="hidden" value="title" name="filter" id="filter_by" />
+          <input type="hidden" value="title" name="filter" id="filter_by"/>
           <input type='text' name='title' class='form-control' id='search_box' placeholder='Search Your Book By Title'/>
         <span class='input-group-addon'>
           <button type='submit' class='btn'>
@@ -82,15 +82,17 @@
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+      <li>
+        <a class="username">
           <span class='icon glyphicon glyphicon-user'></span>
           <%= session[:cas_user] %>
-          <b class="caret"></b>
         </a>
-        <ul class="dropdown-menu">
-          <li><a href="/home/logout">Logout</a></li>
-        </ul>
+      <li>
+        <a href="/home/logout">
+          <span class="glyphicon glyphicon-log-out"></span>
+          Logout
+        </a>
+      </li>
       </li>
     </ul>
   </div>
