--- a/app/assets/stylesheets/book_list.css.scss
+++ b/app/assets/stylesheets/book_list.css.scss
@@ -1,23 +1,9 @@
-.image {
-  img {
-    height: 220px;
-    width: 100%;
-  }
-}
-
-.edit-book-icon {
-  position: relative;
-  top: 128px;
-  left: 270px;
-}
-
 li {
   list-style: none;
 }
 
 a {
-  color: black;
-
+  //  color: black;
   &:hover {
     color: black;
     text-decoration: none;
@@ -25,44 +11,51 @@ a {
 }
 
 .book-data {
-  height: 110px;
+  height: 105px;
   overflow-y: scroll;
-  margin-bottom: 15px;
-}
-
-.block {
-  .right-caret {
-    display: inline-block;
-    width: 0;
-    height: 0;
-    margin-left: 2px;
-    vertical-align: middle;
-    border-left: 6px solid gray;
-    border-top: 6px solid transparent;
-    border-bottom: 6px solid transparent;
-  }
-
-  .caret {
-    display: inline-block;
-    width: 0;
-    height: 0;
-    margin-left: 2px;
-    vertical-align: middle;
-    border-top: 6px solid gray;
-    border-left: 6px solid transparent;
-    border-right: 6px solid transparent;
+  padding-bottom: 10px;
+  margin: 7px;
+  border-bottom: 1px solid gray;
+  #title, #author {
+    color: gray;
   }
 }
 
 .block {
-  background: #fbfbfb;
-  border: 1px solid #d6d6d6;
-  border-radius: 4px;
-  padding-bottom: 5px;
-  width: 285px;
-  float: left;
+  padding: 10px 5px;
+  text-align: center;
+  margin-bottom: 10px;
+  .image {
+    height: 210px;
+  }
+
   span {
     word-wrap: break-word;
     text-align: justify;
+  }
+
+  &:hover {
+    -webkit-box-shadow: 0 12px 30px rgba(84, 137, 181, 0.5);
+    box-shadow: 0 12px 30px rgba(84, 137, 181, 0.5);
+  }
+}
+
+.book-more-details {
+  .dropdown {
+    font-weight: bold;
+    a {
+      color: gray;
+      padding: 2px 12px;
+    }
+    span {
+      font-size: 15px;
+      position: relative;
+      top: 2px;
+    }
+  }
+  .dropdown-menu {
+    left: 48px;
+    top: 29px;
+    background: rgb(231, 238, 243);
   }
 }
