--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -1,3 +1,8 @@
+body {
+  background-color: rgb(231, 238, 243);
+  color: gray;
+}
+
 .content {
   margin: 0 10px;
 }
@@ -104,9 +109,9 @@
 .dropdown-menu {
   min-width: 130px;
   > li > a {
-    color: darkgray;
+    color: gray;
     &:hover {
-      color: darkgray;
+      color: gray;
     }
   }
 }
@@ -168,6 +173,11 @@
 .footer {
   text-align: center;
   bottom: 0;
+  position: absolute;
+  width: 100%;
+  a {
+    color: bl;
+  }
 }
 
 //******************************* Common fetch it some other file **************************************//
