--- a/app/views/books/_books.erb
+++ b/app/views/books/_books.erb
@@ -1,32 +1,26 @@
 <div class='book-blocks clearfix'>
   <% @books.each do |book| %>
-      <div class='col-lg-3 col-md-4 col-sm-6'>
+      <div class='col-lg-2 col-md-3 col-sm-4 col-xs-6'>
         <div class='block'>
           <div class='image'>
             <img src="<%= book.image_url %>"/>
           </div>
 
-          <div class="edit-book-icon">
+          <div class="book-data">
+            <div id="title"><%= book.title %></div>
+            By
+            <div id="author"><%= book.author %></div>
+          </div>
+
+          <div class="book-more-details">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <span class="right-caret"></span>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">+ more
               </a>
               <ul class="dropdown-menu">
                 <li><a href="/books/<%= book.id %>"><span class="glyphicon glyphicon-eye-open"></span> View details</a>
                 </li>
               </ul>
             </li>
-          </div>
-
-          <div class="book-data">
-            <div class='row'>
-              <label class='col-lg-3 col-md-3 col-sm-3 col-xs-3 control-label'>Title:</label>
-              <span class='col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1 col-lg-8 col-md-8 col-sm-8 col-xs-8'><%= book.title %></span>
-            </div>
-            <div class='row'>
-              <label class='col-lg-3 col-md-3 col-sm-3 col-xs-3 control-label'>Author:</label>
-              <span class='col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1 col-lg-8 col-md-8 col-sm-8 col-xs-8'><%= book.author %></span>
-            </div>
           </div>
         </div>
       </div>
