--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,10 @@
 <body>
 
 <div class='header row'>
-  <div class='col-lg-4 col-md-4'>
+  <div class='col-lg-4 col-md-6 col-sm-6'>
     <div class='logo'>Book Share</div>
   </div>
-  <div class='col-lg-offset-4 col-lg-3 col-md-offset-2 col-md-4'>
+  <div class='col-lg-offset-4 col-lg-3 col-md-5 col-sm-5 col-xs-12'>
     <%= form_tag search_index_path, class: 'search-form', method: 'get' do %>
         <div class="input-group">
         <span class="input-group-btn">
