--- a/app/assets/stylesheets/book_list.css.scss
+++ b/app/assets/stylesheets/book_list.css.scss
@@ -43,9 +43,9 @@ a {
 .book-more-details {
   .dropdown {
     font-weight: bold;
-    a {
+    > a {
       color: gray;
-      padding: 2px 12px;
+      padding: 7px 80px;
     }
     span {
       font-size: 15px;
