--- a/app/views/books/show.erb
+++ b/app/views/books/show.erb
@@ -1,65 +1,65 @@
 <div class="row">
-    <a href="#" data-toggle='modal' id="add_new_borrower" class="">
-      <button class="btn btn-primary pull-right">+ Add New Borrower</button>
-    </a>
+  <a href="#" data-toggle='modal' id="add_new_borrower" class="">
+    <button class="btn btn-primary pull-right">+ Add New Borrower</button>
+  </a>
 </div>
 
-<div class="row">
+<div class="row book-details">
 
   <input type="hidden" class="book-id" value=<%= @book.id %>>
 
-  <div class="col-lg-3 col-md-4 col-sm-5 image-div ">
+  <div class="col-lg-1 col-md-2 col-sm-2 col-xs-2 image-div ">
     <img src="<%= @book.image_url %>"/>
   </div>
 
-  <div class="col-lg-9 col-md-8 col-sm-7">
+  <div class="col-lg-10 col-md-9 col-sm-9 col-xs-9">
 
     <div class="row book-info">
-      <label class="col-lg-3 col-md-3 col-sm-3">Title:</label>
-
-      <div class="col-lg-9 col-md-9 col-sm-9">
-        <%= @book.title %>
+      <div class="col-lg-12">
+        <h2 class="heading">
+          <%= @book.title %>
+        </h2>
       </div>
     </div>
 
     <div class="row book-info">
-      <label class="col-lg-3 col-md-3 col-sm-3">Authors:</label>
+      <label class="col-lg-3 col-md-3 col-sm-3 col-xs-3">By:</label>
 
-      <div class="col-lg-9 col-md-9 col-sm-9">
+      <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
         <%= @book.author %>
       </div>
     </div>
 
     <div class="row book-info">
-      <label class="col-lg-3 col-md-3 col-sm-3">ISBN:</label>
+      <label class="col-lg-3 col-md-3 col-sm-3 col-xs-3">ISBN:</label>
 
-      <div class="col-lg-9 col-md-9 col-sm-9">
+      <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
         <%= @book.isbn %>
       </div>
     </div>
 
     <div class="row book-info">
-      <label class="col-lg-3 col-md-3 col-sm-3">Edition:</label>
+      <label class="col-lg-3 col-md-3 col-sm-3 col-xs-3">Edition:</label>
 
-      <div class="col-lg-9 col-md-9 col-sm-9">
+      <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
         <%= @book.edition %>
       </div>
     </div>
 
     <div class="row book-info">
-      <label class="col-lg-3 col-md-3 col-sm-3">Description:</label>
+      <h3 class="heading col-lg-12">Book Overview:</h3>
 
-      <div class="col-lg-9 col-md-9 col-sm-9">
+      <div class="col-lg-12">
         <%= @book.description %>
       </div>
     </div>
 
-
     <div class="row book-info">
-      <label class="col-lg-3 col-md-3 col-sm-3">Lent to:</label>
+      <h3 class="col-lg-12 heading">Lent to:</h3>
 
-      <% if !@book_borrowers.empty? %>
-          <div class="col-lg-9 col-md-9 col-sm-9">
+      <div class="col-lg-12">
+
+        <% if !@book_borrowers.empty? %>
             <table class="table">
               <tr>
                 <th>Name</th>
@@ -78,10 +78,19 @@
               <% end %>
               </tbody>
             </table>
-          </div>
-      <% end %>
+        <% end %>
+      </div>
     </div>
+
   </div>
+
+
+</div>
+
+
+
+
+
 </div>
 
 
