--- a/app/views/books/_books.erb
+++ b/app/views/books/_books.erb
@@ -11,8 +11,16 @@
             By
             <div id="author"><%= book.author %></div>
           </div>
+
           <div class="book-more-details">
-              <a href="/books/<%= book.id %>"><span class="glyphicon glyphicon-eye-open"></span> View details</a>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">+ more
+              </a>
+              <ul class="dropdown-menu">
+                <li><a href="/books/<%= book.id %>"><span class="glyphicon glyphicon-eye-open"></span> View details</a>
+                </li>
+              </ul>
+            </li>
           </div>
         </div>
       </div>
