--- a/app/views/borrowers/_add_borrower_form.erb
+++ b/app/views/borrowers/_add_borrower_form.erb
@@ -22,7 +22,12 @@
                   <div class='form-group'>
                     <%= label_tag 'name', nil, class: 'col-lg-2 col-md-2 control-label' %>
                     <div class='col-lg-8 col-md-10'>
-                      <%= text_field_tag 'name', nil, class: 'form-control'%>
+                      <%= text_field_tag 'name', nil, class: 'form-control', list: 'browsers', autocomplete: 'off'%>
+                      <datalist id="browsers">
+                        <% @users.each do |user| %>
+                          <option value="<%= user %>" >
+                        <% end %>
+                      </datalist>
                       <div class='errors borrower_id-errors'></div>
                     </div>
                   </div>
