--- a/app/views/books/_form.erb
+++ b/app/views/books/_form.erb
@@ -65,8 +65,15 @@
 
                   <div class='row'>
                     <div class="form-group">
-                      <%= f.label :description, class: 'col-lg-2 col-md-2 col-sm-3 col-xs-3 control-label', disabled: true %>
-                      <div class='col-lg-10 col-md-10 col-sm-9 col-xs-9'>
+
+                      <%= label_tag 'tag', nil, class: 'col-lg-offset-1 col-lg-1 col-md-1 col-sm-2 col-xs-2 control-label', disabled: true %>
+                      <div class='col-lg-4 col-md-4 col-sm-9 col-xs-9'>
+                        <%= text_field_tag 'tag', nil, class: 'form-control' %>
+                        <div class='errors tag-errors'></div>
+                      </div>
+
+                      <%= f.label :description, class: 'col-lg-2 col-md-2 col-sm-2 col-xs-2 control-label', disabled: true %>
+                      <div class='col-lg-4 col-md-4 col-sm-9 col-xs-10'>
                         <%= f.text_area :description, class: 'form-control' %>
                         <div class='errors description-errors'></div>
                       </div>
