--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,7 @@
  *
  *= require bootstrap
  *= require bootstrap-datepicker
+ *= require bootstrap-tagsinput
  *= require_self
  *= require_tree .
  */
