--- a/app/assets/stylesheets/form.css.scss
+++ b/app/assets/stylesheets/form.css.scss
@@ -43,6 +43,15 @@ textarea.form-control {
   padding: 0;
 }
 
+.bootstrap-tagsinput {
+  width: 100%;
+  height: 34px;
+}
+
+.label-info {
+  background-color: #3a87ad;
+}
+
 #ISBN_search_button {
   outline: none;
   background: url("background.png");
