--- a/app/views/books/_form.erb
+++ b/app/views/books/_form.erb
@@ -68,8 +68,8 @@
 
                       <%= label_tag 'tag', nil, class: 'col-lg-offset-1 col-lg-1 col-md-1 col-sm-2 col-xs-2 control-label', disabled: true %>
                       <div class='col-lg-4 col-md-4 col-sm-9 col-xs-9'>
-                        <%= text_field_tag 'tag', nil, class: 'form-control' %>
-                        <div class='errors tag-errors'></div>
+                        <%= text_field_tag 'tags', nil, class: 'form-control', 'data-role' => 'tagsinput' %>
+                        <div class='errors tags-errors'></div>
                       </div>
 
                       <%= f.label :description, class: 'col-lg-2 col-md-2 col-sm-2 col-xs-2 control-label', disabled: true %>
