Added test for search and logout. test coverage 100% now

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,10 +25,11 @@
              <li><a>title</a></li>
              <li><a>author</a></li>
              <li><a>isbn</a></li>
+             <li><a>tag</a></li>
            </ul>
         </span>
           <input type="hidden" value="title" name="filter" id="filter_by"/>
-          <input type='text' name='title' class='form-control' id='search_box' placeholder='Search Your Book By Title'/>
+          <input type='text' name='value' class='form-control' id='search_box' placeholder='Search Your Book By Title'/>
         <span class='input-group-addon'>
           <button type='submit' class='btn'>
             <span class='glyphicon glyphicon-search'></span>
