Started with the functionality for deleting the book for the user

--- a/app/views/books/_books.erb
+++ b/app/views/books/_books.erb
@@ -18,6 +18,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a href="/books/<%= book.id %>"><span class="glyphicon glyphicon-eye-open"></span> View details</a>
+                <li><a href="/books/<%= book.id%>" data-method = "delete" ><span class="glyphicon glyphicon-trash" ></span> Delete</a>
                 </li>
               </ul>
             </li>
