--- a/app/views/books/_books.erb
+++ b/app/views/books/_books.erb
@@ -17,9 +17,14 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">+ more
               </a>
               <ul class="dropdown-menu">
-                <li><a href="/books/<%= book.id %>"><span class="glyphicon glyphicon-eye-open"></span> View details</a>
-                <li><a href="/books/<%= book.id%>" data-method = "delete" ><span class="glyphicon glyphicon-trash" ></span> Delete</a>
-                </li>
+                <li><a href="/books/<%= book.id %>">
+                  <span class="glyphicon glyphicon-eye-open"></span>
+                  <span class="link-text">View details</span>
+                </a></li>
+                <li><a href="/books/<%= book.id %>" data-method="delete">
+                  <span class="glyphicon glyphicon-trash"></span>
+                  <span class="link-text">Delete</span>
+                </a></li>
               </ul>
             </li>
           </div>
