--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
  *= require bootstrap
  *= require bootstrap-datepicker
  *= require bootstrap-tagsinput
+ *= require autocomplete
  *= require_self
  *= require_tree .
  */
