--- a/app/assets/stylesheets/book_list.css.scss
+++ b/app/assets/stylesheets/book_list.css.scss
@@ -5,17 +5,17 @@ li {
 }
 
 a {
+  color: $body_text_color;
   &:hover {
     text-decoration: none;
+    color: $body_text_color;
   }
 }
 
 .book-data {
   height: 105px;
   overflow-y: scroll;
-  padding-bottom: 10px;
-  margin: 7px;
-  border-bottom: 1px solid $body_text_color;
+  margin: 7px 7px 0 7px;
 }
 
 .block {
