Resolved the issue of resetting the info on pressing enter and not clearing the tags on resetting

--- a/app/views/books/_form.erb
+++ b/app/views/books/_form.erb
@@ -87,7 +87,7 @@
 
 
           <div class='modal-footer'>
-            <%= f.submit class: 'btn btn-primary', id: 'reset', value: 'Reset' %>
+            <a class='btn btn-primary' id= 'reset'>Reset</a>
             <%= f.submit class: 'btn btn-primary save-form', id: 'save_and_add_another', value: 'Save And Add Another' %>
             <%= f.submit class: 'btn btn-primary save-form', id: 'save_form', value: 'Save' %>
           </div>
