--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -168,7 +168,9 @@ body {
   }
 
   .btn {
-    border-radius: 0;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    padding: 6px;
     outline: none;
     background: $nav_bar_text_color;
     color: $body_text_color
@@ -232,6 +234,12 @@ body {
 
   .navbar-nav > li > a {
     padding: 0 10px;
+  }
+
+  .input-group {
+    .input-group-btn {
+      padding: 5px 0;
+    }
   }
 
 }
