--- a/app/views/books/show.erb
+++ b/app/views/books/show.erb
@@ -18,11 +18,11 @@
 
   <input type="hidden" class="book-id" value=<%= @book.id %>>
 
-  <div class="col-lg-1 col-md-2 col-sm-2 col-xs-2 image-div ">
+  <div class="col-lg-1 col-md-2 col-sm-2 image-div">
     <img src="<%= @book.image_url %>"/>
   </div>
 
-  <div class="col-lg-10 col-md-9 col-sm-9 col-xs-9">
+  <div class="col-lg-10 col-md-9 col-sm-9">
 
     <div class="row book-info">
       <div class="col-lg-12">
